crates/parser/tests/parser/snapshots/main__parser__lexer__adjacent_tokens.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"foo(42)\")"
---
- Ident: foo
- LParen
- Int: 42
- RParen
