crates/parser/tests/parser/snapshots/main__parser__lexer__bool_literals.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"true false\")"
---
- Bool: true
- Bool: false
