crates/parser/tests/parser/snapshots/main__parser__lexer__delimiters.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"{ } ( ) [ ]\")"
---
- LBrace
- RBrace
- LParen
- RParen
- LBracket
- RBracket
