crates/parser/tests/parser/snapshots/main__parser__lexer__integer_literals.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"42 0 100\")"
---
- Int: 42
- Int: 0
- Int: 100
