crates/parser/tests/parser/snapshots/main__parser__lexer__string_escape_backslash.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"\\\"a\\\\\\\\b\\\"\")"
---
- String: "a\\b"
