crates/parser/tests/parser/snapshots/main__parser__lexer__string_escape_newline.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"\\\"hello\\\\nworld\\\"\")"
---
- String: "hello\nworld"
