crates/parser/tests/parser/snapshots/main__parser__lexer__string_escape_quote.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"\\\"say \\\\\\\"hi\\\\\\\"\\\"\")"
---
- String: "say \"hi\""
