crates/parser/tests/parser/snapshots/main__parser__lexer__string_literal.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"\\\"hello\\\"\")"
---
- String: hello
