crates/parser/tests/parser/snapshots/main__parser__lexer__surface_keywords.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"fun let if else match type trait impl import use pub opaque where recur own deriving extern as\")"
---
- Fun
- Let
- If
- Else
- Match
- Type
- Trait
- Impl
- Import
- Use
- Pub
- Opaque
- Where
- Recur
- Own
- Deriving
- Extern
- As
